fixed case header on mobile

--- a/theme/css/component-child.css
+++ b/theme/css/component-child.css
@@ -204,6 +204,13 @@ div#viz-page-header > p {
 }
 
 @media only screen and (max-width: 582px) {
+  .case-description-row {
+    top: 200px;
+  }
+}
+
+
+@media only screen and (max-width: 582px) {
   .viz-content {
     margin-top: 19em;
   }
@@ -762,7 +769,7 @@ div.bl-panel-items > div > div {
 	width: 100%;
 	opacity: 1;
 	bottom: 0px;
-	top: 132px;
+	top: 200px;
 	pointer-events: auto;
 }
 
